<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="@dimen/nav_header_height"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/caldroid_black"
                android:id="@+id/date_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/date"/>

            <TextView
                android:textColor="@color/caldroid_black"
                android:id="@+id/weight_textView"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"/>


            <TextView
                android:textColor="@color/caldroid_black"
                android:layout_gravity="center"
                android:id="@+id/chestSize_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chest"/>

            <TextView
                android:textColor="@color/caldroid_black"
                android:layout_gravity="center"
                android:id="@+id/backSize_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"/>

            <TextView
                android:textColor="@color/caldroid_black"
                android:layout_gravity="center"
                android:id="@+id/armSize_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arms"/>

            <TextView
                android:textColor="@color/caldroid_black"
                android:layout_gravity="center"
                android:id="@+id/forearmSize_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forearms"/>

            <TextView
                android:textColor="@color/caldroid_black"
                android:layout_gravity="center"
                android:id="@+id/waistSize_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waist"/>

            <TextView
                android:textColor="@color/caldroid_black"
                android:layout_gravity="center"
                android:id="@+id/quadSize_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quads"/>

            <TextView
                android:layout_gravity="center"
                android:textColor="@color/caldroid_black"
                android:id="@+id/calfSize_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calves"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>