<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height='wrap_content'
    android:orientation="vertical">

        <TextView
            android:id="@+id/liftingStatsDate_textView"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/datePointer"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/mainWorkout_textView"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/mainWorkoutPointer"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/subWorkout_textView"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/subWorkoutpointer"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/sets_textView"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/totalSets"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/reps_textView"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/totalReps"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/weight_textView"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/totalWeight"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

</LinearLayout>
