<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:id="@+id/workoutPopupMenu"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/viewExerciseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/viewExercise" />

        <Button
            android:id="@+id/deleteExerciseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deleteSubWorkoutExercise" />

        <Button
            android:id="@+id/startWorkoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/startWorkout" />

        <Button
            android:id="@+id/saveWorkoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saveWorkout"
            android:visibility="invisible" />
    </LinearLayout>
</RelativeLayout>
