<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="@dimen/nav_header_height"
        android:id="@+id/workoutStatsCardView"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="10dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/liftingStatsDate_textView"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/datePointer"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/mainWorkout_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mainWorkoutPointer"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/subWorkout_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subWorkoutPointer"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/sets_textView"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/totalSets"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/reps_textView"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/totalReps"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/weight_textView"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/totalWeight"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>