<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:id="@+id/popupWin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/addCustomExerciseBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addNewExercise"
            />

        <Button
            android:id="@+id/deleteCustomExerciseBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deleteAnExercise" />

        <Button
            android:id="@+id/showCustomExercisesBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/viewCustomExercise" />

    </LinearLayout>

</RelativeLayout>
