<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/exercise_popupWindow"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="visible">


    <ListView
        android:id="@+id/exercisePopup_listView"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:visibility="visible" />

    <Button
        android:id="@+id/exercisePopupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addExercise"
        android:visibility="invisible"
        android:layout_below="@+id/exercisePopup_repsTextView"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/exercisePopup_setsTextView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/exercisePopup_listView"
        android:visibility="invisible"
        android:text="@string/sets" />

    <EditText
        android:id="@+id/exercisePopup_repsTextView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:layout_below="@+id/exercisePopup_setsTextView"
        android:text="@string/reps" />
</RelativeLayout>
